namespaces/live-1.cloud-platform.service.justice.gov.uk/money-to-prisoners-test/00-namespace.yaml
# generated by https://github.com/ministryofjustice/money-to-prisoners-deploy
apiVersion: v1
kind: Namespace
metadata:
  name: money-to-prisoners-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "money-to-prisoners"
    cloud-platform.justice.gov.uk/owner: "Prisoner Money Team: money-to-prisoners@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/slack-channel: "prisoner-money"
    cloud-platform.justice.gov.uk/slack-alert-channel: "prisoner-money-alerts"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/money-to-prisoners-common,https://github.com/ministryofjustice/money-to-prisoners-api,https://github.com/ministryofjustice/money-to-prisoners-cashbook,https://github.com/ministryofjustice/money-to-prisoners-bank-admin,https://github.com/ministryofjustice/money-to-prisoners-noms-ops,https://github.com/ministryofjustice/money-to-prisoners-transaction-uploader,https://github.com/ministryofjustice/money-to-prisoners [...]
    iam.amazonaws.com/permitted: "money-to-prisoners-test-iam-role-.*"
